--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 3,
-    "name": "Reading time",
+    "name": "SEI - Modjus Extension",
     "version": "1.0",
-    "description": "Add the reading time to Chrome Extension documentation articles",
+    "description": "Permite a execução de modelos complexos no SEI",
     "icons": {
         "16": "images/icon-16.png",
         "32": "images/icon-32.png",
-        "48": "images/icon-48.png",
+        "64": "images/icon-64.png",
         "128": "images/icon-128.png"
     },
     "content_scripts": [{
