--- a/manifest.json
+++ b/manifest.json
@@ -15,15 +15,25 @@
         ],
         "matches": [
             "https://sei-apresentacao.trf2.jus.br/sei/*"
-        ]
+        ],
+		"css": ["styles/styles.css"]  
     }],
+	    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "images/icon-16.png",
+            "128": "images/icon-128.png"
+        }
+    },
     "web_accessible_resources": [{
         "resources": [
             "/js/listen.js"
         ],
         "matches": [
             "http://localhost/*",
-            "https://sei-apresentacao.trf2.jus.br/*"
+            "https://sei-apresentacao.trf2.jus.br/*",
+			"https://sei-desenvolvimento.trf2.jus.br/*",
+			"https://sei.trf2.jus.br/*"
         ]
     }]
 }
