Refatorar o listener do CKEDITOR e atualizar as permissões do manifest; melhorar o método de injeção de script para aprovação na loja da google

--- a/modjus-extension/manifest.json
+++ b/modjus-extension/manifest.json
@@ -9,9 +9,6 @@
     "64": "images/icon-64.png",
     "128": "images/icon-128.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
   "background": {
     "service_worker": "scripts/background.js"
   },
@@ -34,16 +31,21 @@
       "128": "images/icon-128.png"
     }
   },
-  "web_accessible_resources": [
-    {
-      "resources": ["js/listen.js"],
-      "matches": ["<all_urls>"]
-    }
-  ],
   "host_permissions": [
     "http://localhost/*",
     "https://sei-apresentacao.trf2.jus.br/*",
     "https://sei-desenvolvimento.trf2.jus.br/*",
     "https://sei.trf2.jus.br/*"
-  ]
- }
+  ],
+  "web_accessible_resources": [
+  {
+    "resources": ["js/listen.js"],
+    "matches": [
+      "http://localhost/*",
+      "https://sei-apresentacao.trf2.jus.br/*",
+      "https://sei-desenvolvimento.trf2.jus.br/*",
+      "https://sei.trf2.jus.br/*"
+    ]
+  }
+]
+}
